--- a/index10(1).html
+++ b/index10(1).html
@@ -3,41 +3,28 @@
 
 <head>
 <title>№10</title>
+<!DOCTYPE html>
+<html lang="ru">
+
+<head>
+<title>№10</title>
 </head>
 
 <body>
-<p>Апрель</p>
 <script>
-      let mon = 4;
-	  mon-=1;
-      let d = new Date(2023, mon);
-	
-      let table = '<table><tr><th>пн</th><th>вт</th><th>ср</th><th>чт</th><th>пт</th><th>сб</th><th>вс</th></tr><tr>';      
-      for (let i = 0; i < getDay(d); i++) {
-        table += '<td></td>';
-      }
-      while (d.getMonth() == mon) {
-        table += '<td>' + d.getDate() + '</td>';
-
-        if (getDay(d) % 7 == 6) { 
-          table += '</tr><tr>';
-        }
-
-        d.setDate(d.getDate() + 1);
-      }      
-      if (getDay(d) != 0) {
-        for (let i = getDay(d); i < 7; i++) {
-          table += '<td></td>';
-        }
-      }
-      table += '</tr></table>';    
-
-    function getDay(date) { 
-      let day = date.getDay();
-      if (day == 0) day = 7; 
-      return day - 1;
+  function Palindrom(str)
+{
+    str = str.replaceAll(" ","");
+	str = str.toLowerCase();    
+    for(let i = 0; i < Math.floor(str.length / 2); i++)
+    {
+       if(str[i] != str[str.length - (i+1)])
+            return false;
     }
-    document.write(table);
+    return true;
+}
+alert(Palindrom('Аргентина манит негра'));
+
   </script>
 </body>
 </html>
